2007-05-26  Marcus D. Hanwell <marcus@cryos.org>
	* libavogadro/src/tools/manipulatetool.cpp,
	libavogadro/src/tools/navigatetool.cpp: Use left mouse button for
	rotation and right mouse button for translation.

	* libavogadro/src/engines/bsdyengine.cpp,
	libavogadro/src/tools/selectrotatetool.cpp: Fix a bug where the 0
	indexed bond is not selectable.

2007-05-25  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* avogadro/src/extension.h, avogadro/src/mainwindow.cpp: 
	Add Extension::menuPath() which defines menus and submenus for
	extensions. Default is to use "&Tools" -- existing Tools menu.

	* avogadro/src/extensions/ghemicalextension.h: Use above for a
	"Molecular Mechanics" submenu for all actions.

2007-05-25  Marcus D. Hanwell <marcus@cryos.org>
	* libavogadro/src/engines/bsdyengine.*: Refactored to use the
	overloaded render functions. Added features to push the bond type and
	name to enable bond selection. Added selected bond highlighting.

	* libavogadro/src/tools/selectrotatetool.cpp: Added some initial support
	for selecting bonds with clicks and selection boxes.

	* libavogadro/src/tools/manipulatetool.cpp: Added checks for primitive
	type before doing any manipulation - previously assumed all selected 
	items were atoms.

	* libavogadro/src/global.h: Added SEL_BOND_EXTRA_RADIUS for selected
	bond rendering in the engines. 

2007-05-24  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* avogadro/src/application.cpp: Fix bug 1717423 -- Mac interface
	fix for opening files from Finder.

	* avogadro/src/mainwindow.*: Mac interface fixes. Duplicate menu
	and toolbar actions for  new, open, save, close, quit. Remove
	icons from menu items. Fix bug 1720872: don't close the last
	MainWindow, hide it and disable menu items. Restore upon open or
	new.

	* avogadro/src/extensions/smartsextension.*: Remove undo/redo
	support. Selections cannot be preserved against views, so there's
	no good way to undo a selection change.
