@@ -1,6 +1,6 @@
 Donald Ephraim Curtis <dcurtis3@sourceforge.net>
 Geoffrey Hutchison <geoff@geoffhutchison.net>
-Marcus D. Hanwell <cryos@gentoo.org>
+Marcus D. Hanwell <marcus@cryos.org>
 Benoit Jacob <jacob@math.jussieu.fr>
 Carsten Niehaus <carsten.niehaus@gmail.com>
 
