@@ -7,7 +7,7 @@ Donald Ephraim Curtis &lt;dcurtis3@sourceforge.net&gt;
 Geoffrey Hutchison &lt;geoff@geoffhutchison.net&gt;
 </author>
 <author uid="cryosuk">
-Marcus D. Hanwell &lt;cryos@gentoo.org&gt;
+Marcus D. Hanwell &lt;marcus@cryos.org&gt;
 </author>
 <author uid="benoitjacob">
 Benoit Jacob &lt;jacob@math.jussieu.fr&gt;
