@@ -40,7 +40,7 @@ using namespace OpenBabel;
 using namespace Eigen;
 using namespace Avogadro;
 
-StickEngine::StickEngine(QObject *parent) : Engine(parent), m_glwidget(0), m_update(true)
+StickEngine::StickEngine(QObject *parent) : Engine(parent), m_glwidget(0)
 {
   setName(tr("Stick"));
   setDescription(tr("Renders as Cylinders"));
@@ -53,68 +53,111 @@ StickEngine::~StickEngine()
 bool StickEngine::render(GLWidget *gl)
 {
   m_glwidget = gl;
-  Color map = colorMap();
-
-  m_glwidget->painter()->begin(m_glwidget);
 
   QList<Primitive *> list;
 
-  m_update = false;
+  m_glwidget->painter()->begin(m_glwidget);
+
   glPushAttrib(GL_TRANSFORM_BIT);
   glDisable( GL_NORMALIZE );
   glEnable( GL_RESCALE_NORMAL );
+
+  // Build up a list of the atoms and render them
   list = primitives().subList(Primitive::AtomType);
-  glPushName(Primitive::AtomType);
-  foreach( Primitive *p, list ) {
-    Atom * a = static_cast<Atom *>(p);
-    glPushName(a->GetIdx());
-
-    map.set(a);
-    map.applyAsMaterials();
-
-    m_glwidget->painter()->drawSphere( a->pos(), radius(a) );
-
-    if (m_glwidget->isSelected(a))
-    {
-      map.set( 0.3, 0.6, 1.0, 0.7 );
-      map.applyAsMaterials();
-      glEnable( GL_BLEND );
-      m_glwidget->painter()->drawSphere( a->pos(), SEL_ATOM_EXTRA_RADIUS + radius(a) );
-      glDisable( GL_BLEND );
-    }
-    glPopName();
+  foreach( Primitive *p, list )
+  {
+    render(static_cast<Atom *>(p));
   }
-  glPopName();
 
   list = primitives().subList(Primitive::BondType);
-  Eigen::Vector3d normalVector;
 
   // render bonds (sticks)
   glDisable( GL_RESCALE_NORMAL );
   glEnable( GL_NORMALIZE );
-  
-  foreach( Primitive *p, list ) {
-    const Bond *b = static_cast<const Bond *>(p);
 
-    const Atom* atom1 = static_cast<const Atom *>(b->GetBeginAtom());
-    const Atom* atom2 = static_cast<const Atom *>(b->GetEndAtom());
-    Vector3d v1 (atom1->pos());
-    Vector3d v2 (atom2->pos());
-    Vector3d v3 (( v1 + v2 ) / 2);
-
-    map.set(atom1);
-    map.applyAsMaterials();
-    m_glwidget->painter()->drawCylinder( v1, v3, radius(atom1) );
-
-    map.set(atom2);
-    map.applyAsMaterials();
-    m_glwidget->painter()->drawCylinder( v3, v2, radius(atom1) );
+  // Get a list of bonds and render them
+  list = primitives().subList(Primitive::BondType);
+  foreach( Primitive *p, list )
+  {
+    render(static_cast<const Bond *>(p));
   }
 
   glPopAttrib();
 
   m_glwidget->painter()->end();
   return true;
+}
+
+bool StickEngine::render(const Atom* a)
+{
+  Color map = colorMap();
+
+  // Push the atom type and name
+  glPushName(Primitive::AtomType);
+  glPushName(a->GetIdx());
+
+  map.set(a);
+  map.applyAsMaterials();
+
+  m_glwidget->painter()->drawSphere( a->pos(), radius(a) );
+
+  if (m_glwidget->isSelected(a))
+  {
+    map.set( 0.3, 0.6, 1.0, 0.7 );
+    map.applyAsMaterials();
+    glEnable( GL_BLEND );
+    m_glwidget->painter()->drawSphere( a->pos(), SEL_ATOM_EXTRA_RADIUS + radius(a) );
+    glDisable( GL_BLEND );
+  }
+
+  glPopName();
+  glPopName();
+
+  return true;
+}
+
+bool StickEngine::render(const Bond* b)
+{
+  Color map = colorMap();
+
+  // Push the type and name
+  glPushName(Primitive::BondType);
+  glPushName(b->GetIdx()+1);
+
+  const Atom* atom1 = static_cast<const Atom *>(b->GetBeginAtom());
+  const Atom* atom2 = static_cast<const Atom *>(b->GetEndAtom());
+  Vector3d v1 (atom1->pos());
+  Vector3d v2 (atom2->pos());
+  Vector3d v3 (( v1 + v2 ) / 2);
+
+  map.set(atom1);
+  map.applyAsMaterials();
+  m_glwidget->painter()->drawCylinder( v1, v3, radius(atom1) );
+
+  map.set(atom2);
+  map.applyAsMaterials();
+  m_glwidget->painter()->drawCylinder( v3, v2, radius(atom1) );
+
+  // Render the selection highlight
+  if (m_glwidget->isSelected(b))
+  {
+    map.set( 0.3, 0.6, 1.0, 0.7 );
+    map.applyAsMaterials();
+    glEnable( GL_BLEND );
+    m_glwidget->painter()->drawCylinder( v1, v2, SEL_BOND_EXTRA_RADIUS + radius(atom1) );
+    glDisable( GL_BLEND );
+  }
+
+  glPopName();
+  glPopName();
+
+  return true;
+}
+
+bool StickEngine::render(const Molecule*)
+{
+  // Disabled
+  return false;
 }
 
 double StickEngine::radius(const Primitive *p)
@@ -137,40 +180,6 @@ double StickEngine::radius(const Primitive *p)
 inline double StickEngine::radius(const Atom*)
 {
   return 0.25;
-}
-
-bool StickEngine::render(const Atom*)
-{
-  return true;
-}
-
-bool StickEngine::render(const Bond*)
-{
-  return true;
-}
-
-void StickEngine::addPrimitive(Primitive *primitive)
-{
-  Engine::addPrimitive(primitive);
-  m_update = true;
-}
-
-void StickEngine::updatePrimitive(Primitive *primitive)
-{
-  Engine::updatePrimitive(primitive);
-  m_update = true;
-}
-
-void StickEngine::removePrimitive(Primitive *primitive)
-{
-  Engine::removePrimitive(primitive);
-  m_update = true;
-}
-
-bool StickEngine::render(const Molecule*)
-{
-  // Disabled
-  return false;
 }
 
 #include "stickengine.moc"
